fixed overflow

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -93,8 +93,6 @@ color: rgb(88, 82, 82);
     .a-title {
         margin-top: 10px;
     }
-    .a-left {
-        width: 500px;
-    }
+ 
    
 }
